--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -5,7 +5,7 @@
     & li {
         color: $col-white;
         background-color: $col-highlight;
-        border-radius: 50%;
+        border-radius: 90px/90px;
         margin-right: 10px;
         padding: 10px;
     }
