--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -7,3 +7,13 @@
     height: 30px;
     margin: 0 0.7rem;
 }
+
+.members,
+.activity {
+    
+    .profile-img {
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+    }
+}
