--- a/scss/components/_mediaqueries.scss
+++ b/scss/components/_mediaqueries.scss
@@ -2,6 +2,17 @@
     .main-grid {
         grid-template-rows: 70px 75px 1fr;
     }
+    .social-container {
+        display: flex; 
+        flex-direction: row;
+        & > div {
+            flex-grow: 4;
+            margin-right: 1rem;
+            &:last-child {
+                margin: 0;
+            }
+        }
+    }
 }
 
 @media (min-width: $desktop-break) {
