--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -3,10 +3,14 @@
     text-decoration: none;
     list-style: none;
     & li {
-        color: $col-white;
-        background-color: $col-highlight;
+        color: black;
+        background-color: $col-white;
         border-radius: 90px/90px;
         margin-right: 10px;
         padding: 10px;
+    }
+    .active {
+        background-color: $col-highlight;
+        color: $col-white;
     }
 }
