--- a/css/styles.css
+++ b/css/styles.css
@@ -368,6 +368,10 @@ a {
   font-size: 0.9rem;
 }
 
+.carrot {
+  display: none;
+}
+
 .profile-img {
   border-radius: 50%;
 }
@@ -1314,8 +1318,83 @@ form button {
 }
 
 @media (min-width: 768px) {
+  /*
   .main-grid {
-    grid-template-rows: 70px 75px 1fr;
+      grid-template-rows: 70px 75px 1fr;
+  }
+  */
+  .main-grid {
+    grid-template-columns: 80px 1fr;
+    grid-template-rows: 60px 1fr;
+    grid-template-areas: "site-header site-header" "site-nav site-main";
+  }
+
+  .site-main {
+    display: grid;
+    grid-template-columns: 50%;
+  }
+
+  .dashboard-header,
+.alerts,
+.traffic,
+.social-stats,
+.members,
+.activity,
+.message-user,
+.settings {
+    grid-column: 1/span 2;
+  }
+
+  .daily-traffic {
+    grid-column: 1/span 1;
+  }
+
+  .mobile-users {
+    grid-column: 2/span 1;
+  }
+
+  section, .dashboard-header {
+    max-width: 100%;
+    margin: 0 10px;
+  }
+
+  .traffic-header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .flex-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .flex-container .profile-img {
+    margin-right: 10px;
+  }
+
+  .flex-container {
+    margin-bottom: 10px;
+  }
+
+  .members-text {
+    display: flex;
+    align-items: center;
+  }
+
+  .carrot {
+    display: inline;
+  }
+
+  .inner-text {
+    text-align: left;
+  }
+
+  .site-nav {
+    flex-direction: column;
+    justify-content: start;
+  }
+  .site-nav .svg {
+    margin: 1rem 0;
   }
 
   .social-container {
@@ -1326,23 +1405,33 @@ form button {
     flex-grow: 4;
     margin-right: 1rem;
   }
-  .social-container > div:last-child {
-    margin: 0;
+
+  .toggle-wrapper {
+    max-width: 50%;
   }
 }
 @media (min-width: 1024px) {
-  .main-grid {
-    grid-template-columns: 80px 1fr;
-    grid-template-rows: 60px 1fr;
-    grid-template-areas: "site-header site-header" "site-nav site-main";
+  .dashboard-header,
+.alerts,
+.traffic,
+.social-stats {
+    grid-column: 1/span 2;
   }
 
-  .site-nav {
-    flex-direction: column;
-    justify-content: start;
+  .daily-traffic,
+.members,
+.message-user {
+    grid-column: 1/span 1;
   }
-  .site-nav .svg {
-    margin: 1rem 0;
+
+  .mobile-users,
+.activity,
+.settings {
+    grid-column: 2/span 1;
+  }
+
+  .toggle-wrapper {
+    max-width: 75%;
   }
 }
 
