--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -198,4 +198,9 @@ form {
     border-radius: 5px;
     font-size: .7rem;
     padding: 10px;
+    margin-bottom: 10px;
+}
+
+.chart-half-container {
+    justify-self: center;
 }
