--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -225,3 +225,16 @@ form {
     justify-self: center;
 }
 
+#notifications {
+    position: relative;
+    right: -25px; 
+    top: -30px; 
+    background-color: $col-highlight;
+    border-radius: 50%;
+    width: 5px;
+    height: 5px;
+}
+
+#bell:hover {
+    transform: rotate(10deg);
+}
