--- a/scss/components/_mediaqueries.scss
+++ b/scss/components/_mediaqueries.scss
@@ -35,10 +35,10 @@
         grid-column: 2 / span 1;
     }
 
-    section { //, .dashboard-header 
-        max-width: 100%;
-        margin: 0 10px;
-    }
+    // section { //, .dashboard-header 
+    //     max-width: 100%;
+    //     margin: 0 10px;
+    // }
 
     .traffic-header {
         display: flex; 
@@ -120,5 +120,12 @@
     }
     .toggle-wrapper {
         max-width: 75%;
+    }
+
+    .settings,
+    .message-user {
+        display: flex; 
+        flex-direction: column; 
+        justify-content: space-evenly;
     }
 }
