--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -2,12 +2,13 @@
     display: flex;
     text-decoration: none;
     list-style: none;
+    justify-content: center;
     & li {
         color: black;
         background-color: $col-white;
         border-radius: 90px/90px;
         margin-right: 10px;
-        padding: 10px;
+        padding: 6px;
     }
     .active {
         background-color: $col-highlight;
