--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -15,3 +15,33 @@
         color: $col-white;
     }
 }
+
+.dropdown {
+    position: relative; 
+    display: block;
+    float: right;
+}
+
+.dropdown-content {
+    display: none; 
+    position: absolute; 
+    background-color: $col-white;
+    right: 0;
+    min-width: 160px; 
+    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    a {
+        color: black; 
+        padding: 12px 16px;
+        text-decoration: none; 
+        display: block;
+        &:hover {
+            background-color: $col-primary;
+            color: $col-white;
+        }
+    }
+}
+
+.show {
+    display: block;
+}
