--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -16,9 +16,7 @@ hr {
     margin-bottom: 5px;
 }
 
-section { //.dashboard-header 
-    // max-width: 94%;
-    // margin: 0 auto;
+section { 
     padding: 1rem;
 }
 
@@ -37,7 +35,6 @@ section { //.dashboard-header
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
-    // padding: 10px 0;
 }
 
 .dashboard-search {
