--- a/css/styles.css
+++ b/css/styles.css
@@ -1405,43 +1405,16 @@ form button {
   grid-area: img;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font: 16px Arial;
-}
-
 .autocomplete {
-  /*the container must be positioned relative:*/
   position: relative;
-}
-
-input {
-  border: 1px solid transparent;
-  background-color: #f1f1f1;
-  padding: 10px;
-  font-size: 16px;
-}
-
-input[type=text] {
-  background-color: #f1f1f1;
-  width: 100%;
-}
-
-input[type=submit] {
-  background-color: DodgerBlue;
-  color: #fff;
 }
 
 .autocomplete-items {
   position: absolute;
-  border: 1px solid #d4d4d4;
+  border: 1px solid #ccc;
   border-bottom: none;
   border-top: none;
   z-index: 99;
-  /*position the autocomplete items to be the same width as the container:*/
   top: 100%;
   left: 0;
   right: 0;
@@ -1451,52 +1424,18 @@ input[type=submit] {
   padding: 10px;
   cursor: pointer;
   background-color: #fff;
-  border-bottom: 1px solid #d4d4d4;
+  border-bottom: 1px solid #ccc;
 }
 
 .autocomplete-items div:hover {
-  /*when hovering an item:*/
-  background-color: #e9e9e9;
+  color: #7477bf;
 }
 
 .autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important;
-  color: #ffffff;
+  background-color: #7477bf !important;
+  color: #fff;
 }
 
-/*
-
-
-.autocomplete {
-    position: relative; 
-    display: inline-block;
-}
-
-.autocomplete-items {
-    position: absolute; 
-    border: 1px solid $col-form-borders;
-    border-bottom: none;
-    border-top: none; 
-    z-index: 99; 
-    top: 100%; 
-    left: 0; 
-    right: 0; 
-    div {
-        padding: 10px; 
-        cursor: pointer; 
-        &:hover {
-            background-color: blue;
-        }
-    }
-}
-
-.autocomplete-active {
-    background-color: DodgerBlue !important; 
-    color: #fff;
-}
-
-*/
 @media (min-width: 768px) {
   .main-grid {
     grid-template-columns: 80px 1fr;
@@ -1515,6 +1454,10 @@ input[type=submit] {
 
   .chart-half-container {
     width: 40vw;
+  }
+
+  .daily-traffic {
+    border-right: 1px solid #ccc;
   }
 
   .dashboard-header,
@@ -1611,6 +1554,11 @@ input[type=submit] {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+  }
+
+  .members,
+.message-user {
+    border-right: 1px solid #ccc;
   }
 }
 
