--- a/scss/components/_autocomplete.scss
+++ b/scss/components/_autocomplete.scss
@@ -1,83 +1,28 @@
-//from https://www.w3schools.com/howto/howto_js_autocomplete.asp
-* { box-sizing: border-box; }
-body {
-  font: 16px Arial;
-}
+// adpated from https://www.w3schools.com/howto/howto_js_autocomplete.asp
 .autocomplete {
-  /*the container must be positioned relative:*/
   position: relative;
-  // inline-block;
 }
-input {
-  border: 1px solid transparent;
-  background-color: #f1f1f1;
-  padding: 10px;
-  font-size: 16px;
-}
-input[type=text] {
-  background-color: #f1f1f1;
-  width: 100%;
-}
-input[type=submit] {
-  background-color: DodgerBlue;
-  color: #fff;
-}
+
 .autocomplete-items {
   position: absolute;
-  border: 1px solid #d4d4d4;
+  border: 1px solid $col-form-borders;
   border-bottom: none;
   border-top: none;
   z-index: 99;
-  /*position the autocomplete items to be the same width as the container:*/
-  top: 100%;
+  top: 100%; // items will be same width as container
   left: 0;
   right: 0;
 }
 .autocomplete-items div {
   padding: 10px;
   cursor: pointer;
-  background-color: #fff;
-  border-bottom: 1px solid #d4d4d4;
+  background-color: $col-white;
+  border-bottom: 1px solid $col-form-borders;
 }
 .autocomplete-items div:hover {
-  /*when hovering an item:*/
-  background-color: #e9e9e9;
+  color: $col-primary;
 }
-.autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important;
-  color: #ffffff;
+.autocomplete-active { // arrow key selection
+  background-color: $col-primary !important;
+  color: $col-white;
 }
-
-/*
-
-
-.autocomplete {
-    position: relative; 
-    display: inline-block;
-}
-
-.autocomplete-items {
-    position: absolute; 
-    border: 1px solid $col-form-borders;
-    border-bottom: none;
-    border-top: none; 
-    z-index: 99; 
-    top: 100%; 
-    left: 0; 
-    right: 0; 
-    div {
-        padding: 10px; 
-        cursor: pointer; 
-        &:hover {
-            background-color: blue;
-        }
-    }
-}
-
-.autocomplete-active {
-    background-color: DodgerBlue !important; 
-    color: #fff;
-}
-
-*/
