--- a/scss/components/_mediaqueries.scss
+++ b/scss/components/_mediaqueries.scss
@@ -21,6 +21,10 @@
         width: 40vw;
     }
 
+    .daily-traffic {
+        border-right: 1px solid $col-form-borders;
+    }
+
     .dashboard-header,
     .alerts,
     .traffic,
@@ -116,5 +120,10 @@
         display: flex; 
         flex-direction: column; 
         justify-content: space-evenly;
+    }
+
+    .members,
+    .message-user {
+        border-right: 1px solid $col-form-borders;
     }
 }
