--- a/scss/components/_toggle-switches.scss
+++ b/scss/components/_toggle-switches.scss
@@ -479,7 +479,7 @@
 /* Bugfix for older Webkit, including mobile Webkit. Adapted from
  * http://css-tricks.com/webkit-sibling-bug/
  */
-@media only screen and (-webkit-max-device-pixel-ratio: 2) and (max-device-width: 80em) {
+@media only screen and (-webkit-max-device-pixel-ratio: 2) and (max-device-width: 80em) { //max-device-width
   .switch-light,
   .switch-toggle {
     -webkit-animation: webkitSiblingBugfix infinite 1s; } }
